--- a/package.json
+++ b/package.json
@@ -22,11 +22,25 @@
   },
   "homepage": "https://github.com/claudiordgz/build-improvements#readme",
   "devDependencies": {
+    "bootstrap": "github:twbs/bootstrap#v4.0.0-alpha.2",
+    "bootstrap-loader": "^1.0.6",
     "css-loader": "^0.23.1",
+    "expose-loader": "^0.7.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.0",
+    "imports-loader": "^0.6.5",
+    "jade": "^1.11.0",
+    "jade-html-loader": "0.0.3",
+    "jquery": "^2.2.0",
+    "node-sass": "^3.4.2",
+    "resolve-url-loader": "^1.4.3",
     "reveal.js": "https://github.com/hakimel/reveal.js/tarball/3.2.0",
+    "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
+    "tether": "^1.1.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.12"
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   }
 }
